@@ -12,4 +12,4 @@
     The number after the base version is my patch date -TD
 */
 
-#define VERSION_STRING "GNU indent 2.0-20020426"
+#define VERSION_STRING "GNU indent 2.0-20020428"
